[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "invar"
version = "0.1.0"
authors = ["C_Bookie <duck-vader@hotmail.co.uk>"]
description = "Your project description"
readme = "README.md"
license = "MIT"
repository = "https://github.com/C-Bookie/Invar"

[tool.maturin]
bindings = "pyo3"
